--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -86,6 +86,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           workdir: source
+          level: warning
         if: always()
 
   dry_run_deploy_staging_source:
