--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,6 +40,7 @@ jobs:
     name: Deploy source to staging
     needs: [build, deploy_staging_config]
     runs-on: ubuntu-latest
+    concurrency: staging
     if: ${{ github.event_name == 'release' || github.ref == 'refs/heads/master' }}
 
     steps:
@@ -76,6 +77,7 @@ jobs:
     name: Deploy config to staging
     needs: [build]
     runs-on: ubuntu-latest
+    concurrency: staging
     if: ${{ github.event_name == 'release' || github.ref == 'refs/heads/master' }}
 
     steps:
@@ -108,6 +110,7 @@ jobs:
     name: Deploy source to production
     needs: [smoke_test_staging, deploy_production_config]
     runs-on: ubuntu-latest
+    concurrency: production
     if: ${{ github.event_name == 'release'}}
 
     steps:
@@ -144,6 +147,7 @@ jobs:
     name: Deploy config to production
     needs: [smoke_test_staging]
     runs-on: ubuntu-latest
+    concurrency: production
     if: ${{ github.event_name == 'release' || github.ref == 'refs/heads/master' }}
 
     steps:
